--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Avatar Viewer</title>
+</head>
+<body>
+    <div id="avatar-container">
+        <!-- Aquí embebe el código del avatar -->
+        <script
+        src="https://static.soulmachines.com/widget-snippet-1.12.0.min.js"
+        data-sm-api-key="eyJzb3VsSWQiOiJkZG5hLWRhbmllbC1hbGFyY29uLS1jZW5pdC1hY2NlbnR1cmUtYXZhdGFyIiwiYXV0aFNlcnZlciI6Imh0dHBzOi8vZGguYXouc291bG1hY2hpbmVzLmNsb3VkL2FwaS9qd3QiLCJhdXRoVG9rZW4iOiJhcGlrZXlfdjFfNThiOTE0ZmQtNzhlNy00MDY0LWFlZmQtOWEzNDRiNzFmOGI1In0="
+       ></script>
+    </div>
+</body>
+</html>
 
